--- a/2dShooter/.classpath
+++ b/2dShooter/.classpath
@@ -4,5 +4,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="res"/>
 	<classpathentry kind="lib" path="res/jbox2d-library-2.2.1.1.jar"/>
+	<classpathentry kind="lib" path="res/jars/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="res/jars/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="2dShooter/res/natives"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="res/jars/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
